<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize" >

    <Button
        android:id="@+id/all_foods_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:onClick="allFoodsOnClick"
        android:text="@string/all_foods"
        android:textColor="#FFFFFF"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/switch_user_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:background="@color/colorPrimary"
        android:onClick="switchUserOnClick"
        android:text="@string/switch_user"
        android:textColor="#FFFFFF"
        android:textSize="18sp"/>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"/>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>